Add numbers to grid via Javascript
Added numbers to speed up the process of later adding the eventListener
to change the grid.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+/*{    border: solid 1px red;}*/
+
 body {
     display: flex;
     flex-direction: column;
     width: 960px;
     margin: 0 auto;
+
 }
 
 #body{
@@ -37,13 +40,14 @@ button {
     margin: 30px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .box:hover{
     background-color: red;
 }
 
 .box{
-    padding: 20px;
+    padding: 10px;
     border: solid 1px #eaeaea;
 }
 
